@@ -1,6 +1,7 @@
 - implemented IOC-313 - Add event to be raised by the container whenever empty collection is being resolved
 - implemented IOC-312 - Add shortcut methods to API to register types from given namespace
 
+- fixed IOC-315 - ResolveAll should not ignore generic constraint violations on dependencies of resolved component
 - fixed IOC-311 - OptimizeDependencyResolutionDisposable eats exceptions thrown during installation
 - fixed IOC-310 - Add ability to disable performance counters
 
